samples/_failures_safe/1761658638_adace6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a3833a88.c: In function ‘graph_operation’:
./samples/SAFE/__tmp_a3833a88.c:174:21: error: expected declaration or statement at end of input
  174 |                     g->adj_matrix[v1][v2] = 0;
      |                     ^
./samples/SAFE/__tmp_a3833a88.c:174:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a3833a88.c:174:21: error: expected declaration or statement at end of input
